# ohio-fit

./: .gitignore  CHANGELOG.md  README-LOCAL.md  README.md
.github/workflows/: ci.yml
api/: package-lock.json  package.json
api/mock/profiles/: CIN.json  CLE.json
api/src/: server.ts
etl/: README.md  pyproject.toml  setup.cfg
etl/config/: data_dictionary.yml
etl/runbooks/: etl.md
etl/sample/: README.md  city_more_gaap_2024.csv  county_gaap_2024.csv  school_gaap_2024.csv  template_city_gaap.csv  township_gaap_2024.csv
etl/src/ohio_fit_etl/: aggregates.py  cli.py  ingest.py  mapping.py  process.py
etl/tests/: test_aggregates.py  test_mapping.py
infra/: cdk.json  package.json  tsconfig.json
infra/lib/: ohio-fit-stack.ts
web/: README.md  next.config.js  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/dollars/: page.tsx
web/app/governments/[id]/: page.tsx
web/app/health/: page.tsx
web/app/types/: page.tsx
web/components/: BucketsCard.tsx  Search.tsx  Sparkline.tsx
